@startuml
'https://plantuml.com/class-diagram

entity Player
entity Map

Player *-- PositionComponent
Map *-- TilemapComponent
Player *-- ColliderComponent

class TilemapComponent {
OrthogonalTiledMapRenderer mapRenderer
TiledMap tilemap
float tileWidth
float tileHeight
TiledMapTileLayer collisionLayer
}

class ColliderComponent {
float width
float height
}

class PositionComponent {
float x
float y
int z
}


@enduml